<resources>
    <string name="app_name">Assignment2</string>
    <string name="focal_length_mm">Focal Length [mm]</string>
    <string name="ex_200_for_200mm">Ex: 200 for 200mm</string>
    <string name="aperture">Aperture</string>
    <string name="ex_2_8_for_f2_8">ex 2.8 for F2.8</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="make">Make</string>
    <string name="ex_canon">ex: Canon</string>
    <string name="ex_1_5_for_1_5m">ex: 1.5 for 1.5m</string>
    <string name="circle_of_confusion_m">Circle of Confusion [m]</string>
    <string name="textview">TextView</string>
    <string name="photo_details_with">Photo details with</string>
    <string name="enter_all_values">Enter all values</string>
    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="depth_of_field">Depth of Field</string>
    <string name="far_focal_distance">Far Focal Distance</string>
    <string name="near_focal_distance">Near Focal Distance</string>
    <string name="distance_to_subject_m">Distance to subject [m]</string>
    <string name="selected_aperture">Selected aperture</string>
    <string name="_0_029">0.029</string>
    <string name="name">Name</string>
    <string name="calculate">Calculate</string>
    <string name="select_lens_to_use">Select lens to use</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_focal_length_mm">New Focal Length[mm]</string>
    <string name="new_aperture">New Aperture</string>
    <string name="settings">Settings</string>
    <string name="new_make">New Make</string>
</resources>