<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen4_EditLens">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolBar_screen4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:backgroundTint="#1A9589"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Edit Lens"
        app:titleTextColor="#FFFFFF"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/new_make"
        app:layout_constraintTop_toBottomOf="@+id/ToolBar_screen4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="18dp" />

    <EditText
        android:id="@+id/Text_newLens"
        android:layout_width="382dp"
        android:layout_height="57dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ex_canon"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:text="@string/new_focal_length_mm"
        app:layout_constraintStart_toStartOf="@+id/Text_newLens"
        app:layout_constraintTop_toBottomOf="@+id/Text_newLens" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/new_aperture"
        app:layout_constraintStart_toStartOf="@+id/Text_NewFocalLength"
        app:layout_constraintTop_toBottomOf="@+id/Text_NewFocalLength" />

    <EditText
        android:id="@+id/Text_NewFocalLength"
        android:layout_width="381dp"
        android:layout_height="56dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/ex_200_for_200mm"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/Text_NewAperture"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/ex_2_8_for_f2_8"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/Button_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="@+id/Text_NewAperture"
        app:layout_constraintTop_toBottomOf="@+id/Text_NewAperture" />

</androidx.constraintlayout.widget.ConstraintLayout>