<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen2_AddLens">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar_Screen2"
        android:layout_width="409dp"
        android:layout_height="68dp"
        android:background="#FFFFFF"
        app:titleTextColor="#FFFFFF"
        android:backgroundTint="#1A9589"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolBarStyle"
        app:title="Lens Details"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/Text_focalLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/focal_length_mm"
        app:layout_constraintTop_toBottomOf="@+id/Text_Canon_screen2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="12dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/aperture"
        app:layout_constraintTop_toBottomOf="@+id/Text_Focal_length"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/make"
        app:layout_constraintTop_toBottomOf="@+id/Toolbar_Screen2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/Text_distance_screen2"
        android:layout_width="393dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ex_2_8_for_f2_8"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/Text_Canon_screen2"
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ex_canon"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/Text_Focal_length"
        android:layout_width="391dp"
        android:layout_height="55dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/ex_200_for_200mm"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="@+id/Text_focalLength"
        app:layout_constraintTop_toBottomOf="@+id/Text_focalLength"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>