<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen3_CalculateDOF">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="143dp"
        android:layout_height="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:text="@string/distance_to_subject_m"
        app:layout_constraintEnd_toStartOf="@+id/Text_Distance_to_subject"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolBar_Screen3"
        android:layout_width="410dp"
        android:layout_height="55dp"
        android:background="#FFFFFF"
        android:backgroundTint="#1A9589"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolBarStyle"
        app:title="Calculate DoF"
        app:titleTextColor="#FFFFFF"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/near_focal_distance"
        app:layout_constraintEnd_toStartOf="@+id/Text_nearDistance"
        app:layout_constraintTop_toBottomOf="@+id/ToolBar_Screen3" />

    <TextView
        android:id="@+id/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/far_focal_distance"
        app:layout_constraintEnd_toStartOf="@+id/Text_farDistance"
        app:layout_constraintTop_toBottomOf="@+id/Text1" />

    <TextView
        android:id="@+id/Text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/depth_of_field"
        app:layout_constraintEnd_toStartOf="@+id/Text_DOF"
        app:layout_constraintTop_toBottomOf="@+id/Text2" />

    <TextView
        android:id="@+id/Text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/hyperfocal_distance"
        app:layout_constraintEnd_toStartOf="@+id/Text_hyperFocalDistance"
        app:layout_constraintTop_toBottomOf="@+id/Text3" />

    <TextView
        android:id="@+id/Text_farDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/enter_all_values"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/Text_nearDistance"
        app:layout_constraintTop_toBottomOf="@+id/Text_nearDistance" />

    <TextView
        android:id="@+id/Text_nearDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:text="@string/enter_all_values"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ToolBar_Screen3" />

    <TextView
        android:id="@+id/Text_DOF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_all_values"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/Text_farDistance"
        app:layout_constraintTop_toBottomOf="@+id/Text_farDistance"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Text_hyperFocalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/enter_all_values"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/Text_DOF"
        app:layout_constraintTop_toBottomOf="@+id/Text_DOF"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="0.8dp"
        android:layout_marginTop="13dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/Text4"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/photo_details_with"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/Text_Lens"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/Text_Lens"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/textview"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="9dp"
        android:text="@string/circle_of_confusion_m"
        app:layout_constraintEnd_toStartOf="@+id/Text_COC"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:text="@string/selected_aperture"
        app:layout_constraintEnd_toStartOf="@+id/Text_aperture_screen3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/Text_COC"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="0.029"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/Text_Lens"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Text_Distance_to_subject"
        android:layout_width="188dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:ems="10"

        android:hint="@string/ex_1_5_for_1_5m"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/Text_COC"
        app:layout_constraintTop_toBottomOf="@+id/Text_COC"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/Text_aperture_screen3"
        android:layout_width="187dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:ems="10"

        android:hint="ex: 2.8 for F2.8"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/Text_Distance_to_subject"
        app:layout_constraintTop_toBottomOf="@+id/Text_Distance_to_subject"
        tools:ignore="Autofill,HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/Button_DOF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/Text_aperture_screen3"
        app:layout_constraintTop_toBottomOf="@+id/Text_aperture_screen3" />
</androidx.constraintlayout.widget.ConstraintLayout>